<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/item"
        android:layout_weight="1.6"
        android:maxLines="4"
        android:textColor="@color/secondaryColor"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:layout_weight="1.2"
        android:textColor="@color/secondaryColor"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/qty"
        android:layout_weight=".5"
        android:textColor="@color/secondaryColor"
        android:textAlignment="center"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:layout_weight="1.1"
        android:textAlignment="textEnd"
        android:layout_marginEnd="5dp"
        android:textColor="@color/secondaryColor"
        android:textSize="16sp" />

</LinearLayout>