<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sreens.billing.Billing_Cart_Activity">

    <LinearLayout
        android:id="@+id/linTop"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/primaryColor"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/my_cart"
            android:textColor="@color/white"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linPerson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/linTop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/txtValName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/black"
                android:layout_toEndOf="@+id/txtName"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/txtPhNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_phone_number"
                android:layout_below="@+id/txtName"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/txtValPhNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_toEndOf="@+id/txtPhNo"
                android:layout_below="@+id/txtValName"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/txtIdNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_id_no"
                android:layout_below="@+id/txtPhNo"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:visibility="invisible"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

            <TextView
                android:id="@+id/txtValIdNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_below="@+id/txtPhNo"
                android:layout_toEndOf="@+id/txtIdNo"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:fontFamily="@font/poppins_regular"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/personImage"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:contentDescription="@string/todo"/>

        </RelativeLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/linPerson"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/item"
                android:layout_weight="2.3"
                android:textColor="@color/primaryColor"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/price"
                android:layout_weight="1.3"
                android:textColor="@color/primaryColor"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/qty"
                android:layout_weight="1.2"
                android:textColor="@color/primaryColor"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/total"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:layout_marginEnd="20dp"
                android:textColor="@color/primaryColor"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primaryColor"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/relTicketCart"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="83"
            android:layout_height="0dp" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/pay"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:cornerRadius="10dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
</RelativeLayout>