<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/do_you_want_to_do_close_this_page"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/cancel"
                android:textColor="@color/primaryColor"
                android:textSize="10sp"
                app:cornerRadius="5dp"
                android:layout_marginEnd="20dp"
                app:strokeWidth="1dp"
                app:strokeColor="@color/primaryColor"
                android:layout_marginStart="30dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnYes"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/yes"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:backgroundTint="@color/primaryColor"
                app:cornerRadius="5dp"
                android:layout_marginEnd="30dp"
                style="@style/Widget.MaterialComponents.Button.TextButton" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>