<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/creamy_white"
    tools:context=".ui.sreens.screen.PaymentActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:layout_centerInParent="true"
        android:layout_margin="10dp">

        <LinearLayout
            android:id="@+id/lin_success"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_payment_sucess"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/thank_you"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:text="@string/your_payment_was_successful"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txt_trans_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_name"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txt_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:textSize="22sp" />


        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/lin_failed"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/payment_failed"
                android:textColor="@color/primaryColor"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/montserrat"
                android:textColor="@color/black"
                android:text="@string/it_seems_we_have_not_received_money"
                android:textSize="28sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>





</RelativeLayout>